--- a/public/index.html
+++ b/public/index.html
@@ -1,99 +1,376 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DexGpt</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #ffffff;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-    header {
-      background: #000000;
-      color: #39e704;
-      padding: 1rem;
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
-    .chat-container {
-      flex: 1;
-      padding: 1rem;
-      overflow-y: auto;
-    }
-    .input-container {
-      display: flex;
-      padding: 1rem;
-      background: #fff;
-      border-top: 1px solid #ccc;
-    }
-    .input-container input {
-      flex: 1;
-      padding: 0.75rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    .input-container button {
-      margin-left: 10px;
-      padding: 0.75rem 1rem;
-      background: #00eeff;
-      color: #ff0505;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .message {
-      margin-bottom: 1rem;
-    }
-    .user {
-      text-align: right;
-      color: #4709f1;
-    }
-    .bot {
-      text-align: left;
-      color: #ff0022;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DexGpt</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            background: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+        header {
+            background: #202124;
+            color: #ff0000;
+            padding: 1rem 1.5rem;
+            font-size: 1.1rem;
+            font-weight: 500;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+        header img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 0.75rem;
+        }
+
+        #logoButton {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            background: none;
+            border: none;
+            padding: 8px;
+            cursor: pointer;
+        }
+        #logoButton img {
+            width: 30px;
+            height: 30px;
+        }
+
+        .chat-container {
+            flex: 1;
+            padding: 1rem 1.5rem;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+        }
+        .message {
+            margin-bottom: 0.75rem;
+            padding: 0.75rem 1rem;
+            border-radius: 8px;
+            word-break: break-word;
+        }
+        .user {
+            background: #303134;
+            color: #e8eaed;
+            text-align: right;
+            align-self: flex-end;
+        }
+        .bot {
+            background: #44474a;
+            color: #e8eaed;
+            text-align: left;
+            align-self: flex-start;
+        }
+        .image-message {
+            text-align: center;
+            margin-top: 0.5rem;
+        }
+        .image-message img {
+            max-width: 80%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+        }
+        .input-area {
+            background: #202124;
+            padding: 0.75rem 1.5rem;
+            border-top: 1px solid #5f6368;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .upload-button-container {
+            display: flex;
+            align-items: center;
+            margin-right: 0.5rem;
+        }
+        .upload-button {
+            background: none;
+            border: none;
+            color: #8ab4f8;
+            cursor: pointer;
+            outline: none;
+            padding: 0.5rem;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            margin-right: 0.5rem;
+        }
+        .upload-button:hover {
+            background: rgba(138, 180, 248, 0.1);
+        }
+        #imageInput {
+            display: none;
+        }
+        #image-preview {
+            max-width: 30px;
+            max-height: 30px;
+            border-radius: 50%;
+            margin-right: 0.5rem;
+            display: none;
+        }
+        #upload-loading {
+            font-size: 1.2rem;
+            margin-right: 0.5rem;
+            display: none;
+        }
+        #modelSelector {
+            background: #303134;
+            color: #e8eaed;
+            border: none;
+            border-radius: 24px;
+            padding: 0.75rem 1rem;
+            font-size: 1rem;
+            outline: none;
+            margin-right: 1rem;
+            width: auto;
+            min-width: 150px;
+        }
+        #userInput {
+            flex: 1;
+            padding: 0.75rem 1rem;
+            border: none;
+            border-radius: 24px;
+            background: #303134;
+            color: #e8eaed;
+            font-size: 1rem;
+            outline: none;
+            margin-right: 1rem;
+        }
+        #sendButton {
+            padding: 0.75rem 1.5rem;
+            background: #8ab4f8;
+            color: #202124;
+            border: none;
+            border-radius: 24px;
+            cursor: pointer;
+            font-size: 1rem;
+            font-weight: 500;
+            outline: none;
+        }
+        .loading-indicator {
+            text-align: center;
+            color: #8ab4f8;
+            margin-top: 1rem;
+            font-size: 1rem;
+            display: none;
+        }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>DexGpt</header>
-  <div class="chat-container" id="chat"></div>
-  <div class="input-container">
-    <input type="text" id="userInput" placeholder="Tanya DexGpt...">
-    <button onclick="sendMessage()">Kirim</button>
-  </div>
+    <header>
+        <img src="./background.jpg" alt="Foto Kecil Anda">
+        DexGpt
+        <button id="logoButton">
+            <img src="./logo.jpeg" alt="Logo">
+        </button>
+    </header>
+    <div class="chat-container" id="chat">
+        <div class="loading-indicator" id="loading">Tunggu sebentar...</div>
+    </div>
+        <div class="input-area">
+            <div class="upload-button-container">
+                <button class="upload-button" onclick="document.getElementById('imageInput').click()">
+                    <span id="upload-icon" style="font-size: 1.5rem; display: flex;">+</span>
+                    <img id="image-preview" src="#" alt="Pratinjau Gambar" style="display: none;">
+                </button>
+                <input type="file" id="imageInput" accept="image/*" onchange="handleImageUpload()">
+            </div>
+            <select id="modelSelector">
+                <option value="gemini-1.5-flash-latest" selected>1.5 Flash</option>
+                <option value="gemini-1.5-pro-latest">1.5 Pro</option>
+            </select>
+            <input type="text" id="userInput" placeholder="Tanya DexGpt atau kirim gambar..." onkeydown="if(event.key === 'Enter'){ sendMessage(); }">
+            <button id="sendButton" onclick="sendMessage()">Kirim</button>
+        </div>
 
-  <script>
-    async function sendMessage() {
-      const input = document.getElementById('userInput');
-      const message = input.value.trim();
-      if (!message) return;
+    <script>
+        async function sendMessage() {
+            const input = document.getElementById('userInput');
+            const message = input.value.trim();
+            const imageInput = document.getElementById('imageInput');
+            const imageFile = imageInput.files[0];
+            const uploadIcon = document.getElementById('upload-icon');
+            const imagePreview = document.getElementById('image-preview');
+            const modelSelector = document.getElementById('modelSelector');
+            const selectedModel = modelSelector.value;
+            const loadingIndicator = document.getElementById('loading');
+            const chatContainer = document.getElementById('chat');
 
-      addMessage(message, 'user');
-      input.value = '';
+            if (!message && !imageFile) return;
 
-      const response = await fetch('http://localhost:3000/api/chat', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message })
-      });
+            let promptToSend = message;
+            let imageObjectURL = null;
 
-      const data = await response.json();
-      addMessage(data.reply, 'bot');
-    }
+            if (imageFile) {
+                imageObjectURL = URL.createObjectURL(imageFile);
+                if (!message) {
+                    promptToSend = "Describe this image.";
+                }
+                const visionModelOption = modelSelector.querySelector('option[value="gemini-pro-vision"]');
+                if (visionModelOption) {
+                    modelSelector.value = visionModelOption.value;
+                } else {
+                    console.warn("Model vision tidak ditemukan di selector. Menggunakan model terpilih.");
+                }
+            }
 
-    function addMessage(text, sender) {
-      const chat = document.getElementById('chat');
-      const div = document.createElement('div');
-      div.className = `message ${sender}`;
-      div.textContent = text;
-      chat.appendChild(div);
-      chat.scrollTop = chat.scrollHeight;
-    }
-  </script>
+            addMessage(message || (imageFile ? " " : ""), 'user', imageObjectURL);
+
+            input.value = '';
+            if (imageFile) {
+                imageInput.value = '';
+                imagePreview.style.display = 'none';
+                imagePreview.src = '#';
+                uploadIcon.style.display = 'flex';
+            }
+
+            let formData = new FormData();
+            formData.append('message', promptToSend);
+            formData.append('model', modelSelector.value);
+            if (imageFile) {
+                formData.append('image', imageFile);
+            }
+
+            loadingIndicator.style.display = 'block';
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+
+            try {
+                const response = await fetch('http://localhost:3000/api/chat', {
+                    method: 'POST',
+                    body: formData
+                });
+
+                if (!response.ok) {
+                    const errorData = await response.json().catch(() => ({ reply: `Server error: ${response.status}` }));
+                    throw new Error(errorData.reply || `HTTP error! status: ${response.status}`);
+                }
+
+                const data = await response.json();
+                addMessage(data.reply, 'bot');
+
+                if (data.imageFile) {
+                    const imageUrl = `http://localhost:3000/uploads/${data.imageFile}`;
+                    addImage(imageUrl);
+                }
+
+            } catch (error) {
+                console.error("Error sending message:", error);
+                addMessage(`Error: ${error.message || 'Gagal berkomunikasi dengan server.'}`, 'bot');
+            } finally {
+                loadingIndicator.style.display = 'none';
+            }
+        }
+
+        function addMessage(content, sender, imageUrl = null) {
+            const chatContainer = document.getElementById('chat');
+            const messageElement = document.createElement('div');
+            messageElement.classList.add('message', sender);
+
+            const textElement = document.createElement('div');
+            if (content && content.trim() !== "") {
+                textElement.textContent = content;
+            }
+
+            if (imageUrl) {
+                const imageContainer = document.createElement('div');
+                imageContainer.classList.add('image-message');
+                if (content && content.trim() !== "" && sender === 'user') {
+                    imageContainer.style.marginTop = '0.5rem';
+                } else {
+                    imageContainer.style.marginTop = '0';
+                }
+
+               const img = document.createElement('img');
+img.src = imageUrl;
+img.style.width = '200px';   // Atur lebar
+img.style.height = 'auto';  // Biarkan tinggi menyesuaikan
+                img.onload = () => {
+                    chatContainer.scrollTop = chatContainer.scrollHeight;
+                    if (imageUrl.startsWith('blob:')) {
+                        URL.revokeObjectURL(imageUrl);
+                    }
+                };
+                img.onerror = () => {
+                    console.error("Gagal memuat pratinjau gambar:", imageUrl);
+                    if (imageUrl.startsWith('blob:')) {
+                        URL.revokeObjectURL(imageUrl);
+                    }
+                }
+                imageContainer.appendChild(img);
+
+                if (sender === 'user') {
+                    messageElement.appendChild(imageContainer);
+                    if (content && content.trim() !== "") {
+                        messageElement.appendChild(textElement);
+                    }
+                } else {
+                    if (content && content.trim() !== "") {
+                        messageElement.appendChild(textElement);
+                        imageContainer.style.marginTop = '0.5rem';
+                    }
+                    messageElement.appendChild(imageContainer);
+                }
+            } else if (content && content.trim() !== "") {
+                messageElement.appendChild(textElement);
+            }
+
+            if (messageElement.hasChildNodes()) {
+                chatContainer.appendChild(messageElement);
+                chatContainer.scrollTop = chatContainer.scrollHeight;
+            }
+        }
+
+        function addImage(imageUrl) {
+            const chatContainer = document.getElementById('chat');
+            const messageElement = document.createElement('div');
+            messageElement.classList.add('message', 'bot');
+            const imageMessage = document.createElement('div');
+            imageMessage.classList.add('image-message');
+            const img = document.createElement('img');
+            img.src = imageUrl;
+            img.onload = () => chatContainer.scrollTop = chatContainer.scrollHeight;
+            imageMessage.appendChild(img);
+            messageElement.appendChild(imageMessage);
+            chatContainer.appendChild(messageElement);
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+        }
+
+        function handleImageUpload() {
+            const fileInput = document.getElementById('imageInput');
+            const imagePreview = document.getElementById('image-preview');
+            const uploadIcon = document.getElementById('upload-icon');
+
+            if (fileInput.files && fileInput.files[0]) {
+                const file = fileInput.files[0];
+                const reader = new FileReader();
+
+                reader.onload = function(e) {
+                    imagePreview.src = e.target.result;
+                    imagePreview.style.display = 'inline-block';
+                    uploadIcon.style.display = 'none';
+                }
+                reader.readAsDataURL(file);
+            } else {
+                imagePreview.style.display = 'none';
+                imagePreview.src = '#';
+                uploadIcon.style.display = 'flex';
+            }
+        }
+
+    </script>
 </body>
 </html>
